--- a/src/style.css
+++ b/src/style.css
@@ -42,4 +42,5 @@ body {
     background: var(--background);
     color: var(--foreground);
     font-size: var(--font-size-m);
+    transition: color 0.25s, background-color 0.25s;
 }
