--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,9 @@
     --radius: 8px;
     --primary-color: #9a86fd;
 
+    --font-variable: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",sans-serif;
+    --font-mono: 'JetBrains Mono', monospace;
+
     --font-size-xs: 14px;
     --font-size-s: 16px;
     --font-size-m: 18px;
@@ -47,7 +50,7 @@ body,
 }
 
 body {
-    font-family: "Inter",-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",sans-serif;
+    font-family: var(--font-variable);
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-text-size-adjust: none;
     background: var(--background);
